--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"sass-embedded": "^1.88.0",
-		"svelte": "^5.0.0",
+		"svelte": "^5.28.2",
 		"vite": "^6.2.5"
+	},
+	"dependencies": {
+		"@sveltestrap/sveltestrap": "^7.1.0"
 	}
 }
