--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"vite": "^6.2.5"
 	},
 	"dependencies": {
-		"@sveltestrap/sveltestrap": "^7.1.0"
+		"@sveltestrap/sveltestrap": "^7.1.0",
+		"zod": "^3.25.3"
 	}
 }
